--- a/ERS/src/main/webapp/Employee.html
+++ b/ERS/src/main/webapp/Employee.html
@@ -1,10 +1,225 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Location Service</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="resources/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="resources/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+    <!-- Plugin CSS -->
+    <link href="resources/vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+
+    <!-- Theme CSS -->
+    <link href="resources/css/creative.min.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+<style>
+.modal-title {
+  color:#F05F40;
+  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+}
+
+.modal-content {
+	background-color: #fefefe;
+	font-family: 'futura-book';
+	margin: 15% auto;
+	padding: 24px;
+	border: 1px solid #888;
+	width: 70%;
+	text-align: center;
+}
+.modal-body{
+    height: 250px;
+}
+
+.service-box {
+    position: relative;
+    left: 150px;
+}
+
+</style>
 </head>
-<body>
-Welcome to the Employee home page
+
+<body id="page-top">
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Welcome</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#services">Services</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="index.html">Logout</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+    <header>
+        <div class="header-content">
+            <div class="header-content-inner">
+                <h1 id="homeHeading">EMPLOYEE REIMBURSEMENT SYSTEM</h1>
+                <hr>
+                <p>Employee system that lets an individual to reimburse certain perccentage of the amound spent has tuition fees. Courses like certifications, technical seminars and so on are encourged by the organisation. Department head or managers approval is mandatory</p>
+                <a href="#services" class="btn btn-primary btn-xl page-scroll">GET STARTED</a>
+            </div>
+        </div>
+    </header>
+
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Services</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                      <a href="#result" ng-click="command('new')" class="page-scroll btn btn-default btn-xl sr-button">
+                        <i class="fa fa-4x fa-exchange text-primary sr-icons"></i></a>
+                        <h3>New</h3>
+                        <p class="text-muted">Create New Reimbursement</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                      <a href="#States" data-toggle="modal" data-target="#States" class="page-scroll btn btn-default btn-xl sr-button">
+                        <i class="fa fa-4x fa-files-o text-primary sr-icons"></i></a>
+                        <h3>View</h3>
+                        <p class="text-muted">View All Reimbursements</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                      <a href="#States" data-toggle="modal" data-target="#States" class="page-scroll btn btn-default btn-xl sr-button">
+                        <i class="fa fa-4x fa-user text-primary sr-icons"></i></a>
+                        <h3>Profile</h3>
+                        <p class="text-muted">Edit or View User Information</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+   
+    <!--aside class="bg-dark">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <h2>Free Download Images!</h2>
+                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
+            </div>
+        </div>
+    </aside-->
+    
+    <section id="result" style="display:none">
+        <div class="container">
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <hr class="primary">
+                    <p>Ready to give us your feedback or any queries? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                </div>
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <i class="fa fa-phone fa-3x sr-contact"></i>
+                    <p>123-456-6789</p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                    <p><a href="mailto:your-email@your-domain.com">feedback@ers.com</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- jQuery -->
+    <script src="resources/vendor/jquery/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="resources/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="resources/vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="resources/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="resources/js/creative.min.js"></script>
+
+    <!-- ------------ -->
+		<!-- Submit Modal -->
+		<!-- ------------ -->
+		<div id="States" class="modal">
+			<div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="false">&times;</button>
+            <h4 class="modal-title" id="myModalLabel">Search</h4>
+        </div>
+        <div class="modal-body">
+  				<!--div class="text-center">
+  					<i class="fa fa-cog fa-spin" style="font-size:24px;color:#ef5c1e;vertical-align:top;"></i>
+  					<i class="fa fa-cog fa-spin" style="font-size:48px;color:#f26925;"></i>
+  					<i class="fa fa-cog fa-spin" style="font-size:36px;color:#ef5c1e;vertical-align:top;"></i>
+      		</div-->
+          <div class="row">
+            <div class="form-group">
+  					
+          </div>
+          <p id="modal-footer"><br/><hr/>
+            Thank you for selecting our service.</p>
+        </div>
+			</div>
+		</div>
+<script>
+$("#search").click(function(){
+console.log("Modal View");
+});
+</script>
 </body>
+
 </html>
